# netbox_ansible

./: .gitignore  README.md  ansible.cfg  inventory_netbox.yaml
netbox_ansible/: ansible.cfg  pyproject.toml
netbox_ansible/Organization/Locations/: AUMEL01-Comms_Room.yml  AUSYD01-Comms_Room.yml  CAMON01-Comms_Room.yml  MYKUL01-Comms_Room.yml  NLRTM-SER.yml  NLRTM01-SER.yml  NZAKL01-Comms_Room.yml  UKLON01-Comms_Room.yml  UKLON01-Data_Center.yml  USCHG01-Comms_Room.yml  USCHG01-Data_Center.yml  USDEN01-Comms_Room.yml  USLAX01-Comms_Room.yml
netbox_ansible/Organization/Regions/: Africa.yml  Asia_Pacific.yml  Auckland.yml  Australia.yml  Brisbane.yml  California.yml  Canada.yml  Chicago.yml  Colorado.yml  Denver.yml  Europe.yml  Germany.yml  Hamburg.yml  Illinois.yml  Johannesburg.yml  Kuala_Lumpur.yml  London.yml  Los_Angeles.yml  Malaysia.yml  Melbourne.yml  Montreal.yml  Netherlands.yml  New_Zealand.yml  North_America.yml  Rotterdam.yml  South_Africa.yml  Sydney.yml  United_Kingdom.yml  United_States.yml
netbox_ansible/Organization/Site_Groups/: Branch.yml  Corporate.yml  Der.yml
netbox_ansible/Organization/Sites/: AUMEL01.yml  AUSYD01.yml  CAMON01.yml  MYKUL01.yml  NLRTM01.yml  NLRTM02.yml  NZAKL01.yml  UKLON01.yml  USCHG01.yml  USDEN01.yml  USLAX01.yml  ZAJNB01.yml
netbox_ansible/config_context/: ntp_context.yaml
netbox_ansible/group_vars/: all.yml
netbox_ansible/inventory/: netbox.yaml
netbox_ansible/playbooks/: generate_config_context.yaml  generate_site_yaml.yml  generate_yaml_files.yml  get_inventory.yml  organizations.yaml
(+32 files in other folders)
